Remove boxes around youtube embeds
These didn't line up with the embed preview on the second-largest screen
size for some reason, so remove them, which looks better anyway.

Increase the text contrast on wrapper.style2 so the box-less text is
visible against the background.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1999,8 +1999,8 @@ input, select, textarea {
 		}
 
 		.wrapper.style2 {
+			color: #222;
 			background-color: #eaeaea;
-			text-shadow: 1px 1px 0px #fff;
 		}
 
 		.wrapper.style3 {
