--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -752,8 +752,8 @@
 		}
 
 		&.style2 {
-			background-color: #fafafa;
-			text-shadow: 1px 1px 0px #fff;
+			color: #222;
+			background-color: #eaeaea;
 		}
 
 		&.style3 {
