--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2262,53 +2262,128 @@ ul.icons li .icon:before {
 }
 
 /* Contact */
-ul.contact {
+ul.social {
+  cursor: default;
+  margin: 0;
   list-style: none;
-  padding: 0;
+  padding-left: 0;
 }
 
-ul.contact li {
-  text-decoration: none;
-  margin: 2.5em 0 0 0;
-  padding: 0 0 0 3.25em;
+ul.social li {
+  position: relative;
+  display: inline-block;
+  margin: 0.25em;
+  top: 0;
+  padding-left: 0;
+}
+
+ul.social li a {
+  -moz-transition: top .2s ease-in-out;
+  -webkit-transition: top .2s ease-in-out;
+  -ms-transition: top .2s ease-in-out;
+  transition: top .2s ease-in-out;
+  display: block;
+  width: 48px;
+  height: 48px;
+  border-radius: 6px;
+  top: 0;
   position: relative;
 }
 
-ul.contact li:before {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-  text-transform: none !important;
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 400;
-}
-
-ul.contact li:before {
-  border-radius: 100%;
-  border: solid 2px rgba(255, 255, 255, 0.125);
-  display: inline-block;
-  font-size: 0.8em;
-  height: 2.5em;
-  left: 0;
-  line-height: 2.35em;
-  position: absolute;
+ul.social li a:before {
+  background-image: url("images/bg.png"), -moz-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+  background-image: url("images/bg.png"), -webkit-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+  background-image: url("images/bg.png"), -ms-linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+  background-image: url("images/bg.png"), linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3));
+  -moz-transition: background-color .2s ease-in-out;
+  -webkit-transition: background-color .2s ease-in-out;
+  -ms-transition: background-color .2s ease-in-out;
+  transition: background-color .2s ease-in-out;
+  background-color: #888;
+  border-radius: 6px;
+  box-shadow: inset 0px 0px 0px 1px #282828, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
+  color: #2E2E2E !important;
+  display: block;
+  font-size: 26px;
+  height: 48px;
+  line-height: 48px;
   text-align: center;
-  top: 0;
-  width: 2.5em;
+  outline: 0;
+  overflow: hidden;
+  text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.1);
+  width: 48px;
 }
 
-ul.contact li:first-child {
-  margin-top: 0;
+ul.social li a.fa-twitter {
+  background-color: #2DAAE4;
 }
 
-@media screen and (max-width: 736px) {
-  ul.contact li {
-    margin: 1.5em 0 0 0;
-  }
+ul.social li a.fa-facebook-f {
+  background-color: #3C5A98;
+}
+
+ul.social li a.fa-dribbble {
+  background-color: #C4376B;
+}
+
+ul.social li a.fa-linkedin-in {
+  background-color: #006599;
+}
+
+ul.social li a.fa-tumblr {
+  background-color: #51718A;
+}
+
+ul.social li a.fa-google-plus {
+  background-color: #DA2713;
+}
+
+ul.social li a.fa-github {
+  background-color: #FAFAFA;
+}
+
+ul.social li a.fa-rss {
+  background-color: #F2600B;
+}
+
+ul.social li a.fa-instagram {
+  background-color: #E0D7C8;
+}
+
+ul.social li a.fa-foursquare {
+  background-color: #39A3D4;
+}
+
+ul.social li a.fa-skype {
+  background-color: #10BEF1;
+}
+
+ul.social li a.fa-soundcloud {
+  background-color: #FE5419;
+}
+
+ul.social li a.fa-youtube {
+  background-color: #BF2E25;
+}
+
+ul.social li a.fa-blogger {
+  background-color: #FF6501;
+}
+
+ul.social li a.fa-flickr {
+  background-color: #0062DB;
+}
+
+ul.social li a.fa-vimeo {
+  background-color: #4C8AB0;
+}
+
+ul.social li a:hover {
+  top: -5px;
+}
+
+ul.social li a:hover:before {
+  background-color: transparent;
 }
 
 /* Pagination */
@@ -3550,10 +3625,6 @@ body.is-preload #banner p {
   width: calc(50% - 1.5em);
 }
 
-#footer .inner .contact {
-  width: calc(50% - 1.5em);
-}
-
 #footer .inner .copyright {
   border-top: solid 2px rgba(255, 255, 255, 0.125);
   list-style: none;
@@ -3608,10 +3679,6 @@ body.is-preload #banner p {
     width: 100%;
     margin: 0 0 4em 0;
   }
-  #footer .inner .contact {
-    width: 100%;
-    margin: 0 0 4em 0;
-  }
   #footer .inner .copyright {
     margin: 4em 0 2em 0;
   }
@@ -3626,9 +3693,6 @@ body.is-preload #banner p {
     padding: 2em 2em 0.1em 2em ;
   }
   #footer .inner form {
-    margin: 0 0 3em 0;
-  }
-  #footer .inner .contact {
     margin: 0 0 3em 0;
   }
 }
