--- a/assets/sass/components/_contact.scss
+++ b/assets/sass/components/_contact.scss
@@ -1,43 +1,122 @@
 ///
-/// Solid State by HTML5 UP
+/// From Miniport by HTML5 UP
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
 
 /* Contact */
 
-	ul.contact {
+	ul.social {
+		cursor: default;
+		margin: 0;
 		list-style: none;
-		padding: 0;
+		padding-left: 0;
 
 		li {
-			@include icon;
-			margin: (_size(element-margin) * 1.25) 0 0 0;
-			padding: 0 0 0 3.25em;
 			position: relative;
+			display: inline-block;
+			margin: 0.25em;
+			top: 0;
+			padding-left: 0;
 
-			&:before {
-				border-radius: 100%;
-				border: solid 2px _palette(border);
-				display: inline-block;
-				font-size: 0.8em;
-				height: 2.5em;
-				left: 0;
-				line-height: 2.35em;
-				position: absolute;
-				text-align: center;
+			a {
+				@include vendor('transition', 'top .2s ease-in-out');
+				display: block;
+				width: 48px;
+				height: 48px;
+				border-radius: 6px;
 				top: 0;
-				width: 2.5em;
-			}
+				position: relative;
 
-			&:first-child {
-				margin-top: 0;
-			}
-		}
+				&:before {
+					@include vendor('background-image', ('url("images/bg.png")', 'linear-gradient(top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.3))'));
+					@include vendor('transition', 'background-color .2s ease-in-out');
+					background-color: #888;
+					border-radius: 6px;
+					box-shadow: inset 0px 0px 0px 1px #282828, inset 0px 2px 1px 0px rgba(255, 255, 255, 0.1);
+					color: #2E2E2E !important;
+					display: block;
+					font-size: 26px;
+					height: 48px;
+					line-height: 48px;
+					text-align: center;
+					outline: 0;
+					overflow: hidden;
+					text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.1);
+					width: 48px;
+				}
 
-		@include breakpoint('<=small') {
-			li {
-				margin: (_size(element-margin) * 0.75) 0 0 0;
+				&.fa-twitter {
+					background-color: #2DAAE4;
+				}
+
+				&.fa-facebook-f {
+					background-color: #3C5A98;
+				}
+
+				&.fa-dribbble {
+					background-color: #C4376B;
+				}
+
+				&.fa-linkedin-in {
+					background-color: #006599;
+				}
+
+				&.fa-tumblr {
+					background-color: #51718A;
+				}
+
+				&.fa-google-plus {
+					background-color: #DA2713;
+				}
+
+				&.fa-github {
+					background-color: #FAFAFA;
+				}
+
+				&.fa-rss {
+					background-color: #F2600B;
+				}
+
+				&.fa-instagram {
+					background-color: #E0D7C8;
+				}
+
+				&.fa-foursquare {
+					background-color: #39A3D4;
+				}
+
+				&.fa-skype {
+					background-color: #10BEF1;
+				}
+
+				&.fa-soundcloud {
+					background-color: #FE5419;
+				}
+
+				&.fa-youtube {
+					background-color: #BF2E25;
+				}
+
+				&.fa-blogger {
+					background-color: #FF6501;
+				}
+
+				&.fa-flickr {
+					background-color: #0062DB;
+				}
+
+				&.fa-vimeo {
+					background-color: #4C8AB0;
+				}
+
+				&:hover {
+					top: -5px;
+
+					&:before {
+						background-color: transparent;
+					}
+				}
 			}
 		}
 	}
