Add copyright info to footer
Tweak the CSS a bit so that each list entry is on its own line.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3375,20 +3375,20 @@ body.is-preload #banner p {
 }
 
 #footer .inner .copyright li {
-  border-left: solid 2px rgba(255, 255, 255, 0.125);
+  border-left: 0;
   color: rgba(255, 255, 255, 0.35);
-  display: inline-block;
+  display: block;
   font-size: 0.9em;
   line-height: 1;
-  margin-left: 1em;
+  margin: 1em 0 0 0;
   padding: 0;
-  padding-left: 1em;
+  padding-left: 0;
 }
 
 #footer .inner .copyright li:first-child {
   border-left: 0;
   margin-left: 0;
-  padding-left: 0;
+  margin-top: 0;
 }
 
 #footer .inner .copyright li a {
@@ -3432,14 +3432,8 @@ body.is-preload #banner p {
 }
 
 @media screen and (max-width: 480px) {
-  #footer .inner .copyright li {
-    border-left: 0;
-    display: block;
-    margin: 1em 0 0 0;
-    padding-left: 0;
-  }
-  #footer .inner .copyright li:first-child {
-    margin-top: 0;
+  #footer .inner {
+    padding: 2em 2em 0.1em 2em ;
   }
 }
 
