--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -27,19 +27,19 @@
 				width: 100%;
 
 				li {
-					border-left: solid 2px _palette(border);
+					border-left: 0;
 					color: _palette(fg-light);
-					display: inline-block;
+					display: block;
 					font-size: 0.9em;
 					line-height: 1;
-					margin-left: 1em;
+					margin: 1em 0 0 0;
 					padding: 0;
-					padding-left: 1em;
+					padding-left: 0;
 
 					&:first-child {
 						border-left: 0;
 						margin-left: 0;
-						padding-left: 0;
+						margin-top: 0;
 					}
 
 					a {
@@ -93,18 +93,7 @@
 
 		@include breakpoint('<=xsmall') {
 			.inner {
-				.copyright {
-					li {
-						border-left: 0;
-						display: block;
-						margin: 1em 0 0 0;
-						padding-left: 0;
-
-						&:first-child {
-							margin-top: 0;
-						}
-					}
-				}
+				@include padding(2em, 2em);
 			}
 		}
 
